--- a/styles/navigator/navigator.module.css
+++ b/styles/navigator/navigator.module.css
@@ -1,11 +1,13 @@
 .container {
   height: 100%;
   width: 100%;
+  
 
 }
 .navBox{
+  background-color: rgb(9, 229, 9);
   height: 70px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid rgb(60, 201, 12);
   border-radius: 6px;
 }
 .navigators {
@@ -14,8 +16,8 @@
   justify-content: space-around;
   align-items: center;
 }
-
 .navigator {
+  
   border:0px;
   height: 100%;
   display: flex;
@@ -23,13 +25,29 @@
   margin:0px 1px;
   justify-content: center;
   align-items: center;
-  color: black;
-  font-size: 16px;
+  color: white;
+  font-size: 20px;
   opacity: 1;
   transition: 0.6s ease-in-out;
 }
+@media only screen and (max-width: 600px) {
+  .navigator {
+
+    border:0px;
+    height: 100%;
+    display: flex;
+    width: 100%;
+    margin:0px 2px;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 14px;
+    opacity: 1;
+    transition: 0.6s ease-in-out;
+  }
+}
 .navigator:hover {
-  opacity: 0.4;
+  opacity: 0.8;
   border-radius: 8px;
   box-shadow: 0 4px 30px rgba(6, 0, 0, 0.4);
   transition: 0.4s ease-in-out;
